# tmrc

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  about.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  search.html  searchindex.js  training_config.html
.github/workflows/: deploy-docs.yml  python-package.yml
_sources/: getting_started.rst.txt  index.rst.txt  training_config.rst.txt
_sources/source/: modules.rst.txt
configs/training/: default_train_config.yaml
docs/: conf.py  getting_started.rst  index.rst  training_config.rst
docs/source/: tmrc.rst
source/: modules.html  tmrc.html
src/tmrc/tmrc_core/data/: debug.py  utils.py
src/tmrc/tmrc_core/data/tests/: tests.py
src/tmrc/tmrc_core/models/: __init__.py  gpt.py
src/tmrc/tmrc_core/models/components/: __init__.py  decoder.py  layers.py  optimizers.py
src/tmrc/tmrc_core/training/: data.py  debug.ipynb  train.py
src/tmrc/tmrc_core/training/temp/train_data/: global_indices.npy
src/tmrc/tmrc_core/utils/: platform.py  registry.py  simple_sum.py
src/tmrc_core/models/: gpt.py
src/tmrc_core/models/components/: __init__.py  decoder.py  layers.py
tests/: test_simplesum.py
tests/test_flex/: internal_test_bsz.py  test_flex.py  test_flex.yaml
tests/test_flex/temp/train_data/: global_indices.npy
tests/test_gpt/: test_config.yaml  test_model.py
